# clases-diplomado-gen-ia

./: .gitignore  README.md
class_3_5_deployment/: .env.example  README.md  pyproject.toml
class_3_5_deployment/deck/: Tarea_RAG.pptx
class_3_5_deployment/leccion1_docker-hello-world/: Dockerfile  README.md  main.py
class_3_5_deployment/leccion2_serve-chain-api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Test_remote_langchain_client.ipynb  fly.toml  pyproject.toml
class_3_5_deployment/leccion2_serve-chain-api/app/: server.py
class_3_5_deployment/leccion3_anthropic_managed_agents/: .env.example  .gitignore  README.md  SLIDES.md  Test_managed_agent_sessions.ipynb  agent.py  app.py
class_3_5_deployment/leccion4_intro_qdrant/: .env.example  README.md  intro_qdrant.ipynb  trump_speech.txt
class_3_6_production/: README.md
class_3_6_production/deck/: deck_3_6_production.pptx
class_3_6_production/leccion1_evaluacion_langsmith/: .env.example  .gitignore  README.md  ejemplos_eval.csv  evaluacion_de_agentes.ipynb  pyproject.toml  requirements.txt
class_3_6_production/leccion2_versionamiento_prompts/: .env.example  README.md  ai_news.txt  pyproject.toml  versionamiento_de_prompts.ipynb
class_3_6_production/leccion3_versionamiento_skills/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  versionamiento_de_skills.ipynb
