[project]
name = "leccion1-evaluacion-langsmith"
version = "0.1.0"
description = "Evaluación de LLMs con LangSmith: datasets, evaluadores y métricas compuestas."
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain==1.3.13",
    "langchain-core==1.4.9",
    "langchain-openai==1.3.5",
    "langsmith==0.9.5",
    "python-dotenv==1.0.1",
    "pandas==2.2.3",
    "ipykernel>=6.29",
]

[tool.uv]
package = false
