[project]
name = "leccion3-versionamiento-skills"
version = "0.1.0"
description = "Versionamiento de skills con Packmind y consumo con un agente LangChain (progressive disclosure)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain==1.3.13",
    "langchain-core==1.4.9",
    "langchain-openai==1.3.5",
    "langsmith==0.9.5",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "ipykernel>=6.29",
]

[tool.uv]
package = false
